llvm/test/tools/llubi/lib_uninit_string.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

declare ptr @malloc(i64)
declare i32 @puts(ptr)

define i32 @main() {
entry:
  %ptr = call ptr @malloc(i64 10)

  %1 = call i32 @puts(ptr %ptr)

  ret i32 0
}
; CHECK: Entering function: main
; CHECK-NEXT:   %ptr = call ptr @malloc(i64 10) => ptr 0x10 [ptr]
; CHECK-NEXT: Immediate UB detected: Read uninitialized or poison memory while parsing C-string.
; CHECK-NEXT: error: Execution of function 'main' failed.
